svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: grafana
    chart: grafana-0.0.31
    heritage: Tiller
    io.cattle.field/appId: grafana
    release: grafana
  name: grafana-grafana
  namespace: grafana
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
